# opengl_cmake

./: CMakeLists.txt
CMakeProject/: CMakeLists.txt  CMakeProject.cpp  CMakeProject.h
CMakeProject/compile/: Shader.h
include/glad/: glad.h
lib/: glfw3.lib
